--- a/SallesWebMvc/appsettings.json
+++ b/SallesWebMvc/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SallesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SallesWebMvcContext-c728f6d0-3bcd-4718-a991-de34ce27ca79;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
