--- a/SallesWebMvc/appsettings.json
+++ b/SallesWebMvc/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SallesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SallesWebMvcContext-c728f6d0-3bcd-4718-a991-de34ce27ca79;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SallesWebMvcContext": "server=localhost;userid=root;password=1234567;database=saleswebmvcappdb"
   }
 }
